<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText android:id="@+id/edit_text_user_name"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_user_name" />
    
    <EditText android:id="@+id/edit_text_password"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_password" />
    
    <Button
        android:id="@+id/button_set_login_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_set_login_data"
        android:onClick="setLoginData" />
    
</LinearLayout>