<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/textview_editFlight_departure_headline"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/edit_text_departure"
	    android:textColor="#FFFFFF"
	    android:textSize="16sp"
	    android:padding="10dip"
	    android:layout_marginLeft="0dip"
	    android:layout_marginTop="0dip"
	    android:layout_marginBottom="0dip" />
    
    <EditText android:id="@+id/edit_text_departure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_departure" />
    
    <TextView android:id="@+id/textview_editFlight_destination_headline"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/edit_text_destination"
	    android:textColor="#FFFFFF"
	    android:textSize="16sp"
	    android:padding="10dip"
	    android:layout_marginLeft="0dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="0dip" />
    
    <EditText android:id="@+id/edit_text_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_destination" />
    
    <TextView android:id="@+id/textview_editFlight_airplane_headline"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/edit_text_airplane_type"
	    android:textColor="#FFFFFF"
	    android:textSize="16sp"
	    android:padding="10dip"
	    android:layout_marginLeft="0dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="0dip" />
    
    <EditText android:id="@+id/edit_text_airplane_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_airplane_type" />
    
    <Button
        android:id="@+id/button_save_flight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/button_save_flight"
        android:onClick="editSelectedFlight" />
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:background="#c0c0c0"
	    android:layout_marginLeft="5dip"
	    android:layout_marginRight="5dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="10dip"/>
    
    <Button
        android:id="@+id/button_delete_flight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/button_delete_flight"
        android:onClick="editSelectedFlight" />

</LinearLayout>