<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/layout_bg_light"
    android:padding="5dip"
    android:layout_margin="10dip" >

    <TextView android:id="@+id/textview_flight_browser_headline"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/fragment_flight_browser"
	    android:textColor="#000000"
	    android:textSize="16sp"
	    android:padding="10dip"
	    android:layout_marginLeft="0dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="2dip" />
    
    <Spinner
	    android:id="@+id/dropdown_file"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />
    
    <TextView android:id="@+id/textview_flight_data"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="" 
              android:background="@drawable/layout_bg_dark"
              android:textColor="#ff6000"
              android:padding="10dip"
              android:layout_marginLeft="5dip"
              android:layout_marginTop="10dip"
              android:layout_marginBottom="10dip" />
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal">
	    
	    <Button
	        android:id="@+id/button_edit_flight"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/button_edit_flight"
	        android:onClick="editSelectedFlight" />
	    
	    <Button
	        android:id="@+id/button_submit_flight"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/button_submit_flight"
	        android:onClick="submitSelectedFlight" />
	    
	    <ProgressBar
	        android:id="@+id/progress_bar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@android:style/Widget.ProgressBar.Small"
	        android:layout_marginRight="5dp"
	        android:visibility="gone" />
    </LinearLayout>
	    
</LinearLayout>